# lumina

./: .gitignore  .npmignore  Cargo.toml  PLAN.md  README.md  check_out_cmd.txt  check_out_msvc.txt  check_output.txt  claude_code_index_plan.txt  cursor_functionality_paper.md  install.ps1  install.sh  package.json
.agent/workflows/: build.md
.github/workflows/: release.yml
docs/: 01-ARCHITECTURE.md  02-PROJECT_STRUCTURE.md  03-CARGO_TOML.md  04-MODULE_DESIGN.md  05-MCP_PROTOCOL.md  06-IMPLEMENTATION_ORDER.md  07-DESIGN_DECISIONS.md  08-TESTING.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: build-binaries.sh  postinstall.js
src/: config.rs  error.rs  init.rs  lib.rs  main.rs  types.rs
src/chunker/: languages.rs  mod.rs  treesitter.rs
src/embeddings/: local.rs  mod.rs  openai.rs  voyage.rs
src/indexer/: hasher.rs  mod.rs
src/mcp/: handler.rs  mod.rs  protocol.rs  tools.rs
src/search/: mod.rs  reranker.rs  rrf.rs
src/store/: lance.rs  mod.rs  tantivy_store.rs
tests/: test_chunker.rs  test_m1.rs
