[package]
name = "lumina"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Semantic code search MCP server for Claude Code"
license = "Apache-2.0"
repository = "https://github.com/JoseZum/lumina"

[[bin]]
name = "lumina"
path = "src/main.rs"

[lib]
name = "lumina"
path = "src/lib.rs"

[dependencies]
# ─── CLI ────────────────────────────────────────────────
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"

# ─── Local embeddings ────────────────────────────────────
fastembed = "5"

# ─── Async runtime (MINIMAL - only for LanceDB) ────────
tokio = { version = "1.43", features = ["rt", "macros"] }

# ─── CPU parallelism ───────────────────────────────────
rayon = "1.10"

# ─── Tree-sitter core ──────────────────────────────────
tree-sitter = "0.24"
streaming-iterator = "0.1"

# ─── Tree-sitter language grammars ──────────────────────
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# ─── Vector storage ────────────────────────────────────
lancedb = "0.15"
futures = "0.3"

arrow-array = "53"
arrow-schema = "53"

# ─── BM25 keyword search ───────────────────────────────
tantivy = "0.22"

# ─── HTTP client ────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "blocking"] }

# ─── Serialization ──────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"

# ─── Hashing ───────────────────────────────────────────
sha2 = "0.10"
hex = "0.4"

# ─── File walking ──────────────────────────────────────
ignore = "0.4"

# ─── Error handling ────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ─── Logging ───────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
